# cw_3_2

./: .gitignore
app/: .gitignore  README.md  main.py  pyproject.toml
app/app/: main.py  utils.py
app/tests/: test_utils.py
app/utils/: utils.py
